--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -18,23 +18,6 @@ body {
     overflow: hidden;
 }
 
-button {
-    width: 90px;
-    margin: 0.5rem;
-    padding: 0.5rem 0;
-}
-
-button:hover:not(:disabled) {
-    cursor: pointer;
-}
-
-.controls {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    display: flex;
-}
-
 video {
     position: absolute;
     width: 100%;
@@ -47,5 +30,13 @@ canvas {
     position: absolute;
     width: 100%;
     height: 100%;
+    pointer-events: none;
     /* border: 4rem solid black; */
+}
+
+#camera-view {
+    position: absolute;
+    background: blue;
+    top: 0;
+    left: 0;
 }
