--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -89,6 +89,7 @@ canvas {
     text-align: center;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
     align-items: flex-start;
+    -webkit-text-stroke: 1px #ddd;
 }
 #hero p:last-child {
     align-items: flex-end;
@@ -145,20 +146,19 @@ canvas {
 #timer #countdown-text {
     position: absolute;
     z-index: 99;
-    color: #eee;
+    color: #fff;
     font-size: 16rem;
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    text-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
 }
 #timer #stop-timer-btn {
     position: absolute;
     width: 120px;
     height: 120px;
     margin: 1rem;
-    border: 3px solid rgba(0, 0, 0, 0.25);
-    border-radius: 100%;
+    border: none;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: transparent;
     color: firebrick;
     font-size: 10rem;
     outline: none;
@@ -172,16 +172,30 @@ canvas {
 #timer #timer-progress {
     position: absolute;
 }
-.progress-ring {
-    background: rgba(0, 0, 0, 0.2);
-    border: 3px solid rgba(0, 0, 0, 0.1);
+#timer #timer-progress::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
+    box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.5);
+    z-index: -1;
+}
+.progress-ring {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    transition: 2s;
 }
 .progress-ring__circle {
-  transition: calc(var(--transition) * 2) stroke-dashoffset;
-  /* axis compensation */
-  transform: rotate(-90deg);
-  transform-origin: 50% 50%;
+    transition: calc(var(--transition) * 3) stroke-dashoffset;
+    /* axis compensation */
+    transform: rotate(-90deg);
+    transform-origin: 50% 50%;
+    stroke: white;
+    stroke-width: 16px;
+    str
+    fill: transparent;
 }
 
 
@@ -304,4 +318,21 @@ canvas {
 }
 .fade-out {
     animation: fade-out var(--transition) ease-in-out 1 forwards;
+}
+
+@media (max-width: 1024px) {
+    #hero .hero-text-primary {
+        font-size: 2.5rem;
+    }
+    #hero #hero-cta {
+        width: 250px;
+        height: 200px;
+        padding: 1.5rem;
+    }
+    #hero-cta img {
+        width: 66%;
+    }
+    #hero .hero-text-secondary {
+        font-size: 2rem;
+    }
 }
